--- a/Laboration 1/teachers-correction-template.tex
+++ b/Laboration 1/teachers-correction-template.tex
@@ -62,7 +62,7 @@
    styrkor och svagheter. Därmed bör det bli enklare att välja rätt typ av datastruktur för ett
    givet problem. Ni kommer även att implementera en egen datastruktur genom realiseringen
    av den abstrakta datatypen Påse (Bag/Multiset). Alla implementationer i denna laboration
-   görs i skalprojektet som finns att tillgå på kurshemsidan. 
+   görs i skalprojektet som finns att tillgå på kurshemsidan
 
 
 
